crates/sakka-test/tests/trybuild/store_dupe.stderr
error: store already specified
 --> tests/trybuild/store_dupe.rs:5:30
  |
5 |     #[sakka(store = version, store = version)]
  |                              ^^^^^
